--- a/views/index.html
+++ b/views/index.html
@@ -17,7 +17,7 @@
         <p id="buscador" ><input type="text" style="width: 300px;" placeholder="Buscar tus productos, marcas.."/><i class="fas fa-search"></i></p>
 
         <br></br>
-        <p id="cuotas"><i class="fas fa-hand-holding-usd"></i> Si Comprá en cuotas y sin tarjeta de crédito</p>
+        <p id="cuotas"><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
     </div>
     <br></br>
     
