--- a/views/index.html
+++ b/views/index.html
@@ -42,51 +42,49 @@
     <h4 class="titulares">Basado en tus últimas visitas</h4>
     <div class="productos">
            
-        <div class="cajas" style="width: device-width;">
-                <img class="imagenes" src="/img/img-macbook-pro-2019.jpg" > </img>
-        <section class="macbook"> 
-            <ul>
+        <div class="cajas">
+        <div class="imagen-producto">
+                <img src="/img/img-macbook-pro-2019.jpg" > </img>
+        </div>
+        <div class="texto-productos">
                 <p class="precios">$200.000</p>
                 <p class="descuento">15% off</p>
                 <p class="descrip">Macbook Pro 2019</p>
-            </ul>
-        
-        </section>  
+        </div>
         </div>
 
         <div class="cajas">
-                <img class="imagenes" src="/img/img-samsung-galaxy-s10.jpg"> </img>
-        <section class="samsung">
-            <ul style="width: device-width;">
+            <div class="imagen-producto">    
+                <img src="/img/img-samsung-galaxy-s10.jpg"> </img>
+            </div>  
+            <div class="texto-productos">
                 <p class="precios">$100.000</p>
                 <p class="descuento">30% off</p>
                 <p class="descrip">Samsung Galaxy s10</p>
-            </ul>
-        
-        </section>
+            </div>
         </div>
        
         
         <div class="cajas">
-                <img class="imagenes" src="/img/img-cafetera-moulinex.jpg"> </img>
-        <section class="cafetera">
-            <ul>
+            <div class="imagen-producto"> 
+                <img src="/img/img-cafetera-moulinex.jpg"> </img>
+            </div>  
+            <div class="texto-productos">
                 <p class="precios">$75.000</p>
                 <p class="descuento">10% off</p>
                 <p class="descrip">Cafetera Moulinex</p>
-            </ul>
-        </section>
+            </div>
         </div>
            
         <div class="cajas">
-                <img class="imagenes" src="/img/img-tv-samsung-smart.jpg"> </img>
-        <section class="tv">
-            <ul>
+            <div class="imagen-producto"> 
+                <img src="/img/img-tv-samsung-smart.jpg"> </img>
+            </div> 
+            <div class="texto-productos">
                 <p class="precios">$300.000</p>
                 <p class="descuento">40% off</p>
                 <p class="descrip">TV Samsung Smart</p>
-            </ul>
-        </section>
+            </div>
         </div>
     
     </div>
