--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,18 +9,53 @@ header{
     background-color: #EAC926;
     
 }
-#encabezado{
-    
-    background-color: #EAC926;
-    height: 8.5vw;
-    padding-right: 8.5vw;
-    padding-left: 8.5vw;
+.logo{
+    width: 200px;
 }
-.imagenes{
-    width:100%; 
-    height:auto;
+.logo-buscador{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.menu-izquierda{
+    display: flex;
+    flex-direction: row;
+}
+.menu-derecha{
+    display: flex;
+    flex-direction: row;
+}
+.menu li{
+    margin-right: 25px;
+    list-style: none;
+}
+#buscador input{
+    width: 400px;
+    height: 30px;
+    border: none;
+}
+::placeholder{
+    color: grey;
+    font-size: 1em;
+    font-style: italic;
+}
+.fa-bars{
+    display: flex;
+    justify-content: center;
+    padding: 20px;
 }
 #banner{
+    width:100%; 
+    height:auto;
+    box-sizing: border-box;
+}
+.titulares{
+    font-size: 24px;
+    padding-top: 20px; 
+}
+
+.imagenes{
     width:100%; 
     height:auto;
 }
@@ -56,7 +91,7 @@ header{
     height: 330px;
     width: 280px;
     object-fit: cover;
-    filter: drop-shadow(0 3px 5px rgba(0,0,0,.7));
+    
 }
 .descuento{
     color: green;
@@ -76,20 +111,7 @@ header{
 
 
 
-.Lista{
-    font-family: 'Roboto', sans-serif;   
-    color: black;
-}
-.titulares{
-    font-size: 24px;
-    padding-top: 20px;
-    
-}
-.logo{
-    text-align: left;
-    padding-left: 40px;
-    width: width-device;
-}
+
 /*
 .precios{
     font-size: 18px;
@@ -104,11 +126,6 @@ header{
 
 }
 */
-::placeholder{
-    color: grey;
-    font-size: 1em;
-    font-style: italic;
-}
 
 /*
 .descrip{
@@ -117,6 +134,7 @@ header{
     margin: 15px;
 }
 */
+/*footer*/
 .fa-credit-card{
     font-size: 25px;
     color: #001adb;
@@ -140,46 +158,67 @@ header{
     justify-content: space-around;
     margin-top: 2vw;
 }
-.fa-bars{
-   
-    height: 50px;
+
+
+@media (min-width:360px){
+
+.menu ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
-#banner{
-    box-sizing: border-box;
+.menu a{
+    text-decoration: none;
+    color: #222222;
+    display: inline-block;
+    padding: 5px 0;
+    font-size: 17px;
+}
+.logo{
+    width: 150px;
+    margin-top: 12px;
+}
+.logo-buscador{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+#buscador input{
+    margin-top: 12px;
+    width: 150px;
 }
 
+#cuotas{
+    font-size: small;
+    text-align: center;
+}
 .menu{
-    padding-right: 8.5vw;
-    padding-left: 8.5vw;
+    display: none;
+}
+.menu ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+.menu a{
+    text-decoration: none;
+    color: #222222;
+    display: inline-block;
+    padding: 5px 0;
+    font-size: 17px;
+}
+.descrip{
+    display: none;
+        }
+
+.fa-bars{
+    padding-bottom: 20px;
+    padding-left: 175px;
+}      
 }
 
-@media (max-width:360px){
-
-        #encabezado-mobile{
-            display: flex;
-            flex-direction: row;
-            justify-content: space-around;
-            width: 100vw;
-        }
-        .descrip{
-            display: none;
-        }
-        .menu{
-            display: none;}
-        .cajas{
-                box-shadow: 0px 0px 10px rgb(100, 100, 100);
-            }
-        #buscador{
-           width: 50px;
-        }
-        .logo{
-            width: 50vw;
-        }
-
-        
-}
-
-@media (min-width: 769px){
+@media (min-width: 768px){
 
     .cajas:hover{
         box-shadow: 0px 0px 10px rgb(100, 100, 100);
@@ -188,23 +227,28 @@ header{
     .menu{
         display: flex;
         flex-direction: row;
-        justify-content:space-between;
+        justify-content:space-around;
         box-sizing: border-box;
     }
     .fa-bars{
         visibility: hidden;
     }
-    #encabezado{
+    .logo-buscador{
         display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        box-sizing: border-box;
+        align-items: center;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
     }
-    #buscador{
-        margin-top: 7vh;
+    #buscador input{
+        margin-top: 12px;
+        width: 350px;
     }
     #cuotas{
-        margin-top: 7vh;
+        font-size: large;
+        text-align: center;
+    }
+    .menu-izquierda{
+        margin-left: 5px;
     }
 /*    .productos{
         display: flex;
