--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,20 +61,43 @@ header{
 }
 .texto-productos{
     margin: 5%;
-    font-size: 150%;
+    font-size: 130%;
     text-align: left;
+    border-top: 1px solid #ebebeb;
+    position: relative;
+    padding-top: 10px;
+}
+.camion{
+    border: 1px green solid;
+    border-radius: 100%;
+    padding: 7px;
+    position: absolute;
+    right: 20px;
+    bottom: 50px;
+    background-color: #fff;
+}
+.fa-truck{
+    color: green;
+}
+.descrip{
+    display: none;
+    position: relative;
+}
+#descrip:hover .descrip{
+    display: block;
+
+
 }
 .productos{
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    background-color: #ccc;
+    background-color: #ebebeb;
 }
 .cajas{
     flex: 1 1 300px;
     background: #fff;
-    border: 1px solid rgba(0, 0, 0, .3);
     position: relative;
     overflow: hidden;
     margin: 20px;
@@ -84,18 +107,31 @@ header{
 }
 .imagen-producto{
     padding: 10px;
-    background: #eee;
+    background: white;
     text-align: center;
 }
 .imagen-producto img{
     height: 330px;
     width: 280px;
     object-fit: cover;
-    
 }
 .descuento{
+    display: inline;
     color: green;
+    margin-left: 8px;
 }
+.precios{
+    display: inline;
+    font-size: 18px;
+}
+.descrip{
+    font-size: 16px;
+    margin-top: 18px;
+    display: flex;
+}
+
+
+
 /*
 .descrip{
     
@@ -150,6 +186,15 @@ header{
     color: #001adb;
     text-align: center;
 }
+.fa-credit-card:hover{
+    color: darkblue;
+}
+.fa-gift:hover{
+    color: darkblue;
+}
+.fa-user-shield:hover{
+    color: darkblue;
+}
 
 #pieDePagina{
     display: flex;
@@ -157,9 +202,51 @@ header{
     flex-direction: row;
     justify-content: space-around;
     margin-top: 2vw;
+    margin-left: 2vw;
+    margin-right: 2vw;
+    
 }
-
-
+/*REGISTER*/
+.formulario{
+        padding-left: 38%;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        background-color: #ebebeb;
+        margin: 10px;
+        margin-top: 25px;
+        
+}
+.form-registro input{
+    border: none;
+    border-radius: 3px;
+    width: 50%;
+    height: 30px;
+}
+.etiqueta-form{
+    font-weight: bold;
+}
+.form-login input{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.botones-formulario{
+    background-color: blue;
+    color: whitesmoke;
+    width: 50%;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 20px;
+}
+.form-login{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
 @media (min-width:360px){
 
 .menu ul{
@@ -177,6 +264,7 @@ header{
 .logo{
     width: 150px;
     margin-top: 12px;
+    margin-right: 5px;
 }
 .logo-buscador{
     display: flex;
@@ -187,6 +275,7 @@ header{
 #buscador input{
     margin-top: 12px;
     width: 150px;
+    margin-left: 5px;
 }
 
 #cuotas{
@@ -208,14 +297,30 @@ header{
     padding: 5px 0;
     font-size: 17px;
 }
-.descrip{
-    display: none;
-        }
 
 .fa-bars{
     padding-bottom: 20px;
     padding-left: 175px;
 }      
+.formulario{
+    padding-left: 3%;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    background-color: #ebebeb;
+    margin: 10px;
+    margin-top: 25px;
+    
+}
+.form-registro input{
+border: none;
+border-radius: 3px;
+width: 50%;
+height: 30px;
+}
+.etiqueta-form{
+font-weight: bold;
+}
 }
 
 @media (min-width: 768px){
@@ -265,7 +370,25 @@ header{
         text-align: left;
         padding-left: 5vw;
     }
-
+    .formulario{
+        padding-left: 3%;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        background-color: #ebebeb;
+        margin: 10px;
+        margin-top: 25px;
+        
+}
+.form-registro input{
+    border: none;
+    border-radius: 3px;
+    width: 400px;
+    height: 30px;
+}
+.etiqueta-form{
+    font-weight: bold;
+}
    
     
 }
