--- a/views/index.html
+++ b/views/index.html
@@ -28,15 +28,15 @@
        <li>Ayuda</li>
     </ul>
     <ul class="menu-derecha">
-       <li><a href="/register"> Crea tu cuenta <i class="far fa-id-card"></i></a></li>
-       <li><a href="/login"> Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+       <li><a href="/register.html"> Crea tu cuenta <i class="far fa-id-card"></i></a></li>
+       <li><a href="/login.html"> Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
        <li><a href="">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
     </ul>
 </nav>
 </header>   
 <img id="banner" src="/img/img-home-banner.jpg" > </img>
 
-<main style="text-align: center;  background-color: whitesmoke;">
+<main style="text-align: center;  background-color: #ebebeb;">
     
 
     <h4 class="titulares">Basado en tus últimas visitas</h4>
@@ -47,10 +47,13 @@
                 <img src="/img/img-macbook-pro-2019.jpg" > </img>
         </div>
         <div class="texto-productos">
+            <span class="camion"><i class="fas fa-truck"></i></span>
                 <p class="precios">$200.000</p>
                 <p class="descuento">15% off</p>
-                <p class="descrip">Macbook Pro 2019</p>
-        </div>
+                <span class="descrip">Macbook Pro 2019</span>
+                
+        
+            </div>
         </div>
 
         <div class="cajas">
@@ -58,9 +61,10 @@
                 <img src="/img/img-samsung-galaxy-s10.jpg"> </img>
             </div>  
             <div class="texto-productos">
+                <span class="camion"><i class="fas fa-truck"></i></span>
                 <p class="precios">$100.000</p>
                 <p class="descuento">30% off</p>
-                <p class="descrip">Samsung Galaxy s10</p>
+                <span class="descrip">Samsung Galaxy s10</span>
             </div>
         </div>
        
@@ -70,9 +74,10 @@
                 <img src="/img/img-cafetera-moulinex.jpg"> </img>
             </div>  
             <div class="texto-productos">
+                <span class="camion"><i class="fas fa-truck"></i></span>
                 <p class="precios">$75.000</p>
                 <p class="descuento">10% off</p>
-                <p class="descrip">Cafetera Moulinex</p>
+                <span class="descrip">Cafetera Moulinex</span>
             </div>
         </div>
            
@@ -81,12 +86,60 @@
                 <img src="/img/img-tv-samsung-smart.jpg"> </img>
             </div> 
             <div class="texto-productos">
+                <span class="camion"><i class="fas fa-truck"></i></span>
                 <p class="precios">$300.000</p>
                 <p class="descuento">40% off</p>
-                <p class="descrip">TV Samsung Smart</p>
+                <span class="descrip">TV Samsung Smart</span>
             </div>
         </div>
+        </div>
+        <h4 class="titulares">Ofertas</h4>
+    <div class="productos">
     
+        <div class="cajas">
+            <div class="imagen-producto">    
+                <img src="/img/img-samsung-galaxy-s10.jpg"> </img>
+            </div>  
+            <div class="texto-productos">
+                <span class="camion"><i class="fas fa-truck"></i></span>
+                <p class="precios">$100.000</p>
+                <p class="descuento">30% off</p>
+                <span class="descrip">Samsung Galaxy s10</span>
+            </div>
+        </div>
+        <div class="cajas">
+            <div class="imagen-producto">    
+                <img src="/img/img-cafetera-moulinex.jpg"> </img>
+            </div>  
+            <div class="texto-productos">
+                <span class="camion"><i class="fas fa-truck"></i></span>
+                <p class="precios">$10.000</p>
+                <p class="descuento">30% off</p>
+                <span class="descrip">Cafetera Moulinex</span>
+            </div>
+        </div>
+        <div class="cajas">
+            <div class="imagen-producto">    
+                <img src="/img/img-samsung-galaxy-s10.jpg"> </img>
+            </div>  
+            <div class="texto-productos">
+                <span class="camion"><i class="fas fa-truck"></i></span>
+                <p class="precios">$100.000</p>
+                <p class="descuento">30% off</p>
+                <span class="descrip">Samsung Galaxy s10</span>
+            </div>
+        </div>
+        <div class="cajas">
+            <div class="imagen-producto">    
+                <img src="/img/img-samsung-galaxy-s10.jpg"> </img>
+            </div>  
+            <div class="texto-productos">
+                <span class="camion"><i class="fas fa-truck"></i></span>
+                <p class="precios">$100.000</p>
+                <p class="descuento">30% off</p>
+                <span class="descrip">Samsung Galaxy s10</span>
+            </div>
+        </div>
     </div>
     </main>
     
