pusheo modificaciones index register y login

--- a/views/login.html
+++ b/views/login.html
@@ -28,8 +28,8 @@
        <li>Ayuda</li>
     </ul>
     <ul class="menu-derecha">
-       <li><a href="/register"> Crea tu cuenta <i class="far fa-id-card"></i></a></li>
-       <li><a href="/login"> Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+       <li><a href="/register.html"> Crea tu cuenta <i class="far fa-id-card"></i></a></li>
+       <li><a href="/login.html"> Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
        <li><a href="">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
     </ul>
 </nav>
@@ -41,14 +41,13 @@
     <div class="form-login">
         <div class="formulario">
             <input type="text" name="nombre-usuario" placeholder="Nombre de Usuari@" id="nombre-usuario" required><br>
-        </div>
 
-        <div class="formulario">
             <label class="etiqueta-form"></label><br>
             <input type="password" name="password" placeholder="Contraseña" required><br>
+            <button type="submit" class="botones-formulario">Enviar</button>
         </div>
     
-            <button type="submit" class="botones-formulario"> Enviar</button>
+            
         </div>
     </div>
     </form>
