--- a/public/css/style.css
+++ b/public/css/style.css
@@ -202,8 +202,8 @@ header{
     flex-direction: row;
     justify-content: space-around;
     margin-top: 2vw;
-    margin-left: 2vw;
-    margin-right: 2vw;
+    padding-top:1.5vw;
+    background-color: #fff;
     
 }
 /*REGISTER*/
@@ -232,14 +232,17 @@ header{
     align-items: center;
 }
 .botones-formulario{
-    background-color: blue;
+    background-color: #3482FA;
+    border: none;
+    border-radius: 5px;
     color: whitesmoke;
-    width: 50%;
+    width: 28.75vw;
     height: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 20px;
+    margin-left: 0px;
+    margin-bottom: 10px;
 }
 .form-login{
     display: flex;
@@ -247,6 +250,89 @@ header{
     align-items: center;
     flex-direction: column;
 }
+.etiqueta-form{
+    font-size: small;
+}
+@media (max-width:360px){
+    .menu ul{
+        list-style: none;
+        margin: 0;
+        padding: 0;
+    }
+    .menu a{
+        text-decoration: none;
+        color: #222222;
+        display: inline-block;
+        padding: 5px 0;
+        font-size: 17px;
+    }
+    .logo{
+        width: 150px;
+        margin-top: 12px;
+        margin-right: 5px;
+    }
+    .logo-buscador{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+    #buscador input{
+        margin-top: 12px;
+        width: 150px;
+        margin-left: 5px;
+    }
+    
+    #cuotas{
+        font-size: small;
+        text-align: center;
+    }
+    .menu{
+        display: none;
+    }
+    .menu ul{
+        list-style: none;
+        margin: 0;
+        padding: 0;
+    }
+    .menu a{
+        text-decoration: none;
+        color: #222222;
+        display: inline-block;
+        padding: 5px 0;
+        font-size: 17px;
+    }
+    
+    .fa-bars{
+        padding-bottom: 20px;
+        padding-left: 175px;
+    }      
+    #pieDePagina{
+        display: flex;
+        flex-direction: column;
+    }
+    .formulario{
+        padding-left: 3%;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        background-color: #ebebeb;
+        margin: 10px;
+        margin-top: 25px;
+        
+    }
+    .form-registro input{
+    border: none;
+    border-radius: 3px;
+    width: 50vw;
+    height: 30px;
+    }
+    .etiqueta-form{
+    font-weight: bold;
+    }
+    }
+
+
 @media (min-width:360px){
 
 .menu ul{
@@ -315,7 +401,7 @@ header{
 .form-registro input{
 border: none;
 border-radius: 3px;
-width: 50%;
+width: 50vw;
 height: 30px;
 }
 .etiqueta-form{
@@ -371,7 +457,7 @@ font-weight: bold;
         padding-left: 5vw;
     }
     .formulario{
-        padding-left: 3%;
+        
         align-items: center;
         justify-content: center;
         flex-wrap: wrap;
@@ -389,7 +475,10 @@ font-weight: bold;
 .etiqueta-form{
     font-weight: bold;
 }
-   
-    
+
+#contenedor:hover{
+    overflow: hidden;
+}
+
 }
 
