--- a/views/register.html
+++ b/views/register.html
@@ -28,8 +28,8 @@
        <li>Ayuda</li>
     </ul>
     <ul class="menu-derecha">
-       <li><a href="/register"> Crea tu cuenta <i class="far fa-id-card"></i></a></li>
-       <li><a href="/login"> Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+       <li><a href="/register.html"> Crea tu cuenta <i class="far fa-id-card"></i></a></li>
+       <li><a href="/login.html">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
        <li><a href="">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
     </ul>
 </nav>
