--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="/css/style.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     </head>
 
@@ -18,7 +19,9 @@
 
         <h2 id="cuotas"><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</h2>
     </div>
-    <i class="fas fa-bars"></i>
+    
+    <i class="large material-icons">insert_chart</i>
+
     
 <nav class="menu">
     <ul class="menu-izquierda">
