--- a/views/index.html
+++ b/views/index.html
@@ -19,8 +19,8 @@
 
         <h2 id="cuotas"><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</h2>
     </div>
+    <i class="fas fa-bars"></i>
     
-    <i class="large material-icons">insert_chart</i>
 
     
 <nav class="menu">
