--- a/views/index.html
+++ b/views/index.html
@@ -54,10 +54,9 @@
             <span class="camion"><i class="fas fa-truck"></i></span>
                 <p class="precios">$200.000</p>
                 <p class="descuento">15% off</p>
-                
+                <div class="contenedor"></div>
                 <span class="descrip">Macbook Pro 2019</span>
                 
-        
             </div>
         </div>
 
