--- a/public/css/style.css
+++ b/public/css/style.css
@@ -130,46 +130,6 @@ header{
     display: flex;
 }
 
-
-
-/*
-.descrip{
-    
-        display: block;
-        font-size: 16px;
-        padding: 5px;
-        
-        height: 30px;
-        right:20px;
-        top:-15px;
-}
-*/
-
-
-
-
-/*
-.precios{
-    font-size: 18px;
-    text-align: left;
-    margin: 15px;
-}
-.descuento{
-    font-size: 16px;
-    text-align: left;
-    margin: 15px;
-    color: green;
-
-}
-*/
-
-/*
-.descrip{
-    font-size: 16px;
-    text-align: left;
-    margin: 15px;
-}
-*/
 /*footer*/
 .fa-credit-card{
     font-size: 25px;
@@ -206,7 +166,7 @@ header{
     background-color: #fff;
     
 }
-/*REGISTER*/
+/*FORMS*/
 .formulario{
         padding-left: 38%;
         align-items: center;
@@ -305,7 +265,7 @@ header{
     
     .fa-bars{
         padding-bottom: 20px;
-        padding-left: 175px;
+        padding-left: 50%;
     }      
     #pieDePagina{
         display: flex;
@@ -332,7 +292,14 @@ header{
     }
     }
 
-
+@media (max-width: 360px){
+    .descrip{
+        display: none;
+    }
+    .camion{
+        bottom: 15px;
+    }
+}
 @media (min-width:360px){
 
 .menu ul{
@@ -363,7 +330,6 @@ header{
     width: 150px;
     margin-left: 5px;
 }
-
 #cuotas{
     font-size: small;
     text-align: center;
@@ -383,10 +349,9 @@ header{
     padding: 5px 0;
     font-size: 17px;
 }
-
 .fa-bars{
     padding-bottom: 20px;
-    padding-left: 175px;
+    padding-left: 50%;
 }      
 .formulario{
     padding-left: 3%;
@@ -395,9 +360,9 @@ header{
     flex-wrap: wrap;
     background-color: #ebebeb;
     margin: 10px;
-    margin-top: 25px;
-    
+    margin-top: 25px;   
 }
+
 .form-registro input{
 border: none;
 border-radius: 3px;
@@ -409,7 +374,7 @@ font-weight: bold;
 }
 }
 
-@media (min-width: 768px){
+@media (min-width: 678px){
 
     .cajas:hover{
         box-shadow: 0px 0px 10px rgb(100, 100, 100);
@@ -441,31 +406,19 @@ font-weight: bold;
     .menu-izquierda{
         margin-left: 5px;
     }
-/*    .productos{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        box-sizing: border-box;
-        text-align: center;
-        margin-right: 1vw;
-        margin-left: 1vw;
-        
-    }
-*/
-    .titulares{
+.titulares{
         text-align: left;
         padding-left: 5vw;
     }
-    .formulario{
+.formulario{
         
-        align-items: center;
-        justify-content: center;
-        flex-wrap: wrap;
-        background-color: #ebebeb;
-        margin: 10px;
-        margin-top: 25px;
-        
-}
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    background-color: #ebebeb;
+    margin: 10px;
+    margin-top: 25px;
+    }
 .form-registro input{
     border: none;
     border-radius: 3px;
@@ -476,9 +429,6 @@ font-weight: bold;
     font-weight: bold;
 }
 
-#contenedor:hover{
-    overflow: hidden;
 }
 
-}
 
