--- a/views/index.html
+++ b/views/index.html
@@ -26,10 +26,10 @@
     
 <nav class="menu">
     <ul class="menu-izquierda">
-       <li>Ofertas</li>
-       <li>Tiendas oficiales</li>
-       <li>Vender</li>
-       <li>Ayuda</li>
+       <li><a href="#">Ofertas</a></li>
+       <li><a href="#">Tiendas oficiales</a></li>
+       <li><a href="#">Vender</a></li>
+       <li><a href="#">Ayuda</a></li>
     </ul>
     <ul class="menu-derecha">
        <li><a href="/register.html"> Crea tu cuenta <i class="far fa-id-card"></i></a></li>
@@ -158,13 +158,14 @@
         <i class="fas fa-gift"></i>
         <h5>Envío gratis desde $2.500</h5>
         <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de Mercado Puntos.</p>
+        <h5 style="font-size: 10px; text-align: center;">Copyright © 1999-2020 MercadoLiebre S.R.L.</h5>
     </div>
     <div id="usuarioshield" style="text-align: center">    
         <i class="fas fa-user-shield"></i>
         <h5>Seguridad, de principio a fin</h5>
         <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre protegid@.</p>
-        <h5 style="font-size: 10px;">Copyright © 1999-2020 MercadoLiebre S.R.L.</h5>
     </div>  
+    
     </div>
     </footer>
 </body>
