--- a/views/index.html
+++ b/views/index.html
@@ -164,6 +164,7 @@
         <i class="fas fa-user-shield"></i>
         <h5>Seguridad, de principio a fin</h5>
         <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre protegid@.</p>
+        <h5 style="font-size: 10px; text-align: center;">Copyright © 1999-2020 MercadoLiebre S.R.L.</h5>
     </div>  
     
     </div>
