agrego detalles footer

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -131,17 +131,17 @@ header{
 
 /*footer*/
 .fa-credit-card{
-    font-size: 25px;
+    font-size: 2em;
     color: #001adb;
     text-align: center;
 }
 .fa-gift{
-    font-size: 25px;
+    font-size: 2em;
     color: #001adb;
     text-align: center;
 }
 .fa-user-shield{
-    font-size: 25px;
+    font-size: 2em;
     color: #001adb;
     text-align: center;
 }
